<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">

    <LinearLayout
        android:id="@+id/layout1"
        android:layout_width="match_parent"
        android:layout_height="60dp">

        <EditText
            android:id="@+id/editText1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:singleLine="true"
            android:lines="1"
            />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layout1">

        <Button
            android:id="@+id/button_c"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:text="@string/erase"
            android:textSize="30sp" />

        <Button
            android:id="@+id/button_delete_last_symbol"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:text="@string/delete"
            android:textStyle="bold"
            android:textSize="30sp" />

        <Button
            android:id="@+id/button_multiplication"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:text="@string/multiplication"
            android:textSize="30sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout1">

        <Button
            android:id="@+id/button7"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layoutDirection="inherit"
            android:text="@string/seven"
            android:textSize="30sp" />

        <Button
            android:id="@+id/button8"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layoutDirection="inherit"
            android:text="@string/eight"
            android:textSize="30sp" />

        <Button
            android:id="@+id/button9"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layoutDirection="inherit"
            android:text="@string/nine"
            android:textSize="30sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout2">

        <Button
            android:id="@+id/button4"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layoutDirection="inherit"
            android:text="@string/four"
            android:textSize="30sp" />

        <Button
            android:id="@+id/button5"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layoutDirection="inherit"
            android:text="@string/five"
            android:textSize="30sp" />

        <Button
            android:id="@+id/button6"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layoutDirection="inherit"
            android:text="@string/six"
            android:textSize="30sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout3">

        <Button
            android:id="@+id/button1"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layoutDirection="inherit"
            android:text="@string/one"
            android:textSize="30sp" />

        <Button
            android:id="@+id/button2"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layoutDirection="inherit"
            android:text="@string/two"
            android:textSize="30sp" />

        <Button
            android:id="@+id/button3"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layoutDirection="inherit"
            android:text="@string/three"
            android:textSize="30sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout4">

        <Button
            android:id="@+id/button0"
            android:layout_width="160dp"
            android:layout_height="80dp"
            android:layoutDirection="inherit"
            android:text="@string/zero"
            android:textSize="30sp" />

        <Button
            android:id="@+id/button_dot"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layoutDirection="inherit"
            android:text="@string/dot"
            android:textSize="30sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/layout1"
        android:layout_toRightOf="@id/linearLayout1">

        <Button
            android:id="@+id/button_division"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layoutDirection="inherit"
            android:text="@string/division"
            android:textSize="30sp" />

    </LinearLayout>

    <Button
        android:id="@+id/button_subtraction"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_below="@+id/linearLayout1"
        android:layout_toEndOf="@+id/linearLayout1"
        android:text="@string/subtraction"
        android:textSize="30sp" />

    <Button
        android:id="@+id/button_equal"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_below="@+id/linearLayout2"
        android:layout_toEndOf="@+id/linearLayout1"
        android:text="@string/equal"
        android:textSize="30sp" />
    <Button
        android:id="@+id/button_plus"
        android:layout_width="80dp"
        android:layout_height="160dp"
        android:layout_below="@+id/linearLayout3"
        android:layout_toEndOf="@+id/linearLayout1"
        android:text="@string/plus"
        android:textSize="30sp"

        />

</RelativeLayout>
